--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -1,8 +1,8 @@
 {
   "acquire-3g-ticket": {
-    "3g-proof": "3-G-Nachweis",
+    "3g-proof": "Nachweis",
     "3g-proof-birthdate": "Geburtsdatum",
-    "3g-proof-label-text": "3-G-Nachweis importieren",
+    "3g-proof-label-text": "Nachweis importieren",
     "3g-proof-proof-from": "Von",
     "3g-proof-status": "Status",
     "additional-information": "Sie können Ihren grünen Pass importieren, indem Sie den entsprechenden QR-Code scannen. Alternativ kann auch ein PDF-Dokument oder ein Bild mit dem QR-Code ausgewählt werden.",
@@ -15,14 +15,14 @@
     "create-ticket-success-title": "Ticket erfolgreich erstellt!",
     "filepicker-button-title": "PDF oder Bild auswählen",
     "filepicker-context": "PDF oder Bild zur Überprüfung auswählen",
-    "found-valid-3g": "Es wurde ein gültiger 3-G-Nachweis importiert.",
-    "found-valid-3g-preCheck": "Es wurden lokal gespeicherte gültige 3-G Informationen gefunden.",
+    "found-valid-3g": "Es wurde ein gültiger Nachweis importiert.",
+    "found-valid-3g-preCheck": "Es wurden lokal gespeicherte gültige Nachweis-Informationen gefunden.",
     "found-valid-selftest": "Es wurde ein Selbsttest gefunden.",
     "found-valid-selftest-preCheck": "Es wurde ein lokal gespeicherter Selbsttest gefunden.",
     "invalid-body": "Bitte versuchen Sie es mit einem anderen Dokument noch einmal.",
-    "invalid-document": "Der 3-G-Nachweis ist aktuell nicht für den Eintritt an der {{place}} gültig.",
+    "invalid-document": "Der Nachweis ist aktuell nicht für den Eintritt an der {{place}} gültig.",
     "invalid-document-prefix": "Technische Details: ",
-    "invalid-qr-body": "Der QR-Code enthält keinen gültigen 3-G-Nachweis.",
+    "invalid-qr-body": "Der QR-Code enthält keinen gültigen Nachweis.",
     "invalid-title": "Validierung fehlgeschlagen!",
     "manage-tickets-link": "Tickets anzeigen",
     "manage-tickets-text": "Es wurden aktive Tickets gefunden. Sie können Ihre aktiven Tickets vorzeigen oder löschen unter: ",
@@ -42,8 +42,8 @@
     "self-test": "Selbsttest",
     "self-test-information": "Bitte überprüfen Sie ob der Nachweis noch gültig ist.",
     "self-test-link": "Link",
-    "trust-and-save-1": "Meinen 3-G-Nachweis importieren und auf diesem Gerät speichern.",
-    "trust-and-save-2": "Ihre Daten werden ausschließlich auf diesem Gerät gespeichert und verarbeitet. Es findet keine automatische Übertragung von importierten 3-G-Nachweisen zwischen Geräten statt. 3-G-Nachweise, die auf anderen Geräten importiert wurden, sind nur auf diesen verfügbar.",
+    "trust-and-save-1": "Meinen Nachweis importieren und auf diesem Gerät speichern.",
+    "trust-and-save-2": "Ihre Daten werden ausschließlich auf diesem Gerät gespeichert und verarbeitet. Es findet keine automatische Übertragung von importierten Nachweisen zwischen Geräten statt. Nachweise, die auf anderen Geräten importiert wurden, sind nur auf diesen verfügbar.",
     "valid-till": "gültig bis "
   },
   "date-time": "{{clock}} Uhr am {{date}}",
@@ -69,27 +69,27 @@
   "self-test-not-supported-body": "Antigen-Tests mit Selbstabnahme („Wohnzimmertests“) nicht mehr als Eintrittsnachweis zulässig.",
   "self-test-not-supported-title": "Selbsttests werden nicht unterstützt",
   "show-active-tickets": {
-    "3-g-evidence": "3-G-Nachweis",
+    "3-g-evidence": "Nachweis",
     "3-g-evidence-green-pass-valid": "Grüner Pass auf diesem Gerät importiert und gültig",
-    "3-g-evidence-greenpass": "3-G-Nachweis: Grüner Pass gefunden",
-    "3-g-evidence-invalid": "kein gültiger 3-G-Nachweis auf diesem Gerät gefunden",
+    "3-g-evidence-greenpass": "Nachweis: Grüner Pass gefunden",
+    "3-g-evidence-invalid": "kein gültiger Nachweis auf diesem Gerät gefunden",
     "3-g-evidence-invalid-text": "Eventuell haben Sie Ihren Nachweis auf einem anderen Gerät importiert, der Nachweis ist nicht mehr gültig oder die Applikation wurde für einen längeren Zeitraum nicht genutzt.",
-    "3-g-evidence-maximize-saving": "Fügen Sie die App auf dem Startbildschirm Ihres Smartphones hinzu, um die Speicherdauer des 3-G-Nachweises zu maximieren.",
+    "3-g-evidence-maximize-saving": "Fügen Sie die App auf dem Startbildschirm Ihres Smartphones hinzu, um die Speicherdauer des Nachweises zu maximieren.",
     "3-g-evidence-selftest": "Selbsttest auf diesem Gerät importiert, manuelle Kontrolle notwendig",
     "delete-ticket-notfound-body": "Es wurde kein aktives Ticket: {{place}} gefunden. Das Ticket ist wahrscheinlich schon abgelaufen oder gelöscht.",
     "delete-ticket-notfound-title": "Ticket nicht gefunden!",
     "delete-ticket-success-body": "Das Ticket für den Ort {{place}} wurde erfolgreich gelöscht.",
     "delete-ticket-success-title": "Ticket erfolgreich gelöscht!",
-    "invalid-evidence": "Falls der 3-G-Nachweis nicht mehr gültig ist, können Sie ein neues Ticket erstellen und einen neuen Nachweis hochladen.",
+    "invalid-evidence": "Falls der Nachweis nicht mehr gültig ist, können Sie ein neues Ticket erstellen und einen neuen Nachweis hochladen.",
     "logged-out-body": "Die Sitzung ist abgelaufen. Bitte melden Sie sich erneut an.",
     "logged-out-title": "Sitzung abgelaufen!",
     "new-ticket": "Neues Ticket anfordern",
-    "no-3g-evidence": "Kein 3-G-Nachweis gefunden",
-    "no-evidence": "Es wurde kein gültiger gespeicherter 3-G-Nachweis gefunden. Zeigen Sie ihren Nachweis manuell vor oder laden Sie einen neuen Nachweis hoch, indem Sie ein neues Ticket erstellen.",
+    "no-3g-evidence": "Kein Nachweis gefunden",
+    "no-evidence": "Es wurde kein gültiger gespeicherter Nachweis gefunden. Zeigen Sie ihren Nachweis manuell vor oder laden Sie einen neuen Nachweis hoch, indem Sie ein neues Ticket erstellen.",
     "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
     "other-error-title": "Fehler!",
     "self-test": "Selbsttest",
-    "self-test-found": "3-G-Nachweis: Selbsttest gefunden",
+    "self-test-found": "Nachweis: Selbsttest gefunden",
     "self-test-information": "Bitte überprüfen Sie ob der Nachweis noch gültig ist.",
     "self-test-link": "Link zum Test",
     "status": "Status: ",
@@ -98,9 +98,9 @@
   },
   "show-btn-text": "Zeigen",
   "show-reference-ticket": {
-    "description": "An dieser Stelle wird die Gültigkeit eines Eintrittstickets angezeigt. Ob ein Ticket aktiv oder inaktiv ist, hängt von dem 3-G-Nachweis ab, der auf dem Gerät der kontrollierten Person importiert ist. Das Referenzticket berechtigt nicht für den Zugang zu den Räumlichkeiten der Universität.",
+    "description": "An dieser Stelle wird die Gültigkeit eines Eintrittstickets angezeigt. Ob ein Ticket aktiv oder inaktiv ist, hängt von dem Nachweis ab, der auf dem Gerät der kontrollierten Person importiert ist. Das Referenzticket berechtigt nicht für den Zugang zu den Räumlichkeiten der Universität.",
     "information-container-body": "Ist ein gültiger Grüner Pass auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Farbe dargestellt. Der QR-Code kann mit GreenCheck validiert werden. Ist ein Selbsttest des Landes Steiermark oder Kärnten auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Graustufen dargestellt. Dieser QR-Code kann nicht in greenlight validiert werden, daher muss die Kontrolle mit einem QR-Code Scanner erfolgen. Ist ein gültiger universitätsinterner Test auf dem Gerät importiert, wird das Ticket in Farbe dargestellt. Die manuelle Validierung dieses Tests kann nur mit dem Originaldokument erfolgen.",
-    "information-container-headline": "Informationen zum 3-G-Nachweis",
+    "information-container-headline": "Informationen zum Nachweis",
     "place-name": "Ort"
   },
   "show-ticket-title": "Ticket: ",
