--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -1,8 +1,8 @@
 {
   "acquire-3g-ticket": {
-    "3g-proof": "3-G-evidence",
+    "3g-proof": "Evidence",
     "3g-proof-birthdate": "Birthdate",
-    "3g-proof-label-text": "Import 3-G-evidence",
+    "3g-proof-label-text": "Import evidence",
     "3g-proof-proof-from": "From",
     "3g-proof-status": "Status",
     "additional-information": "u can import your Green Pass by scanning the corresponding QR code. Alternatively, you can select a PDF document or an image with the QR code. ",
@@ -14,15 +14,15 @@
     "create-ticket-success-body": "The acquired entrance ticket for {{place}} was successfully created.",
     "create-ticket-success-title": "Ticket successfully created!",
     "filepicker-button-title": "Choose PDF or image",
-    "filepicker-context": "Choose PDF or image for 3-G Verification",
-    "found-valid-3g": "A valid 3-G-evidence was imported.",
-    "found-valid-3g-preCheck": "Stored valid 3-G-evidence could be found.",
+    "filepicker-context": "Choose PDF or image for verification",
+    "found-valid-3g": "A valid evidence was imported.",
+    "found-valid-3g-preCheck": "Stored valid evidence could be found.",
     "found-valid-selftest": "A self-test was found.",
     "found-valid-selftest-preCheck": "A locally saved self-test was found.",
     "invalid-body": "Please try again with another document.",
-    "invalid-document": "3-G-evidence is currently not valid for {{place}}.",
+    "invalid-document": "The evidence is currently not valid for {{place}}.",
     "invalid-document-prefix": "Technical details: ",
-    "invalid-qr-body": "The QR code does not contain a valid 3-G-evidence.",
+    "invalid-qr-body": "The QR code does not contain a valid evidence.",
     "invalid-title": "Validation failed!",
     "manage-tickets-link": "Show tickets",
     "manage-tickets-text": "Active tickets could be found. You can manage your active tickets at: ",
@@ -42,8 +42,8 @@
     "self-test": "Selftest",
     "self-test-information": "Please check whether the evidence is still valid.",
     "self-test-link": "Link",
-    "trust-and-save-1": "I agree to import my 3-G-evidence and store this data on my device.",
-    "trust-and-save-2": "Your data is stored and processed exclusively on this device. There is no automatic transfer of imported 3-G-evidence between devices. 3-G-evidence imported on other devices is only available on these devices.",
+    "trust-and-save-1": "I agree to import my evidence and store this data on my device.",
+    "trust-and-save-2": "Your data is stored and processed exclusively on this device. There is no automatic transfer of an imported evidence between devices. The evidence imported on other devices is only available on these devices.",
     "valid-till": "valid until "
   },
   "date-time": "{{clock}} on {{date}}",
@@ -69,27 +69,27 @@
   "self-test-not-supported-body": "Antigen tests with self-acceptance (\"self-tests\") are no longer permitted as proof of entry.",
   "self-test-not-supported-title": "Self-tests are not supported",
   "show-active-tickets": {
-    "3-g-evidence": "3-G-evidence",
+    "3-g-evidence": "Evidence",
     "3-g-evidence-green-pass-valid": "Green Pass imported and valid on this device",
-    "3-g-evidence-greenpass": "3-G-evidence: Green Pass found",
-    "3-g-evidence-invalid": "No valid 3-G-evidence found on this device",
+    "3-g-evidence-greenpass": "Evidence: Green Pass found",
+    "3-g-evidence-invalid": "No valid evidence found on this device",
     "3-g-evidence-invalid-text": "You may have imported your evidence on another device, the evidence is no longer valid or the application has not been used for a longer period of time.",
-    "3-g-evidence-maximize-saving": "Add the app to the home screen of your smartphone to maximize the storage time of the 3-G-evidence.",
+    "3-g-evidence-maximize-saving": "Add the app to the home screen of your smartphone to maximize the storage time of the evidence.",
     "3-g-evidence-selftest": "Self-test imported on this device, manual control necessary",
     "delete-ticket-notfound-body": "No active ticket: {{place}} was found. The ticket has probably already expired or deleted.",
     "delete-ticket-notfound-title": "Ticket not found!",
     "delete-ticket-success-body": "The ticket for {{place}} was successfully deleted.",
     "delete-ticket-success-title": "Ticket successfully deleted!",
-    "invalid-evidence": "If the 3-G-evidence is no longer valid, you can create a new ticket and upload a new evidence.",
+    "invalid-evidence": "If the evidence is no longer valid, you can create a new ticket and upload a new evidence.",
     "logged-out-body": "The session has expired. Please log in again.",
     "logged-out-title": "Session expired!",
     "new-ticket": "Request a new ticket",
-    "no-3g-evidence": "No 3-G-evidence found",
-    "no-evidence": "No valid stored 3-G-evidence was found. Show your evidence manually or upload a new evidence by creating a new ticket.",
+    "no-3g-evidence": "No evidence found",
+    "no-evidence": "No valid stored evidence was found. Show your evidence manually or upload a new evidence by creating a new ticket.",
     "other-error-body": "An unknown error occurred.",
     "other-error-title": "Error!",
     "self-test": "self-test",
-    "self-test-found": "3-G-evidence: Self-test found",
+    "self-test-found": "Evidence: Self-test found",
     "self-test-information": "Please check whether the evidence is still valid.",
     "self-test-link": "Link to the test",
     "status": "Status: ",
@@ -98,9 +98,9 @@
   },
   "show-btn-text": "Show",
   "show-reference-ticket": {
-    "description": "At this point the validity of an entrance ticket is displayed. Whether a ticket is active or inactive depends on the 3-G-evidence imported on the controlled person\u0027s device. The reference ticket does not entitle you to enter rooms at the university.",
+    "description": "At this point the validity of an entrance ticket is displayed. Whether a ticket is active or inactive depends on the evidence imported on the controlled person\u0027s device. The reference ticket does not entitle you to enter rooms at the university.",
     "information-container-body": "If a valid health certificate is available on this device then its QR code is displayed and the ticket is shown in color. This QR code can be checked with GreenCheck. If a self-test that was issued by Land Steiermark or Land Kärnten is available on this device then its QR code is displayed and the ticket is shown in black and white. This QR code cannot be validated by this app, therefore its validation requires a QR code scanner. If a valid university-internal test is available on this device then the ticket is shown in color. Manual validation of this test can only be done with the original document.",
-    "information-container-headline": "Information about 3-G-evidence",
+    "information-container-headline": "Information about evidence",
     "place-name": "Place"
   },
   "show-ticket-title": "Ticket: ",
