Change default slot text

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -5,7 +5,7 @@
     "3g-proof-label-text": "Nachweis importieren",
     "3g-proof-proof-from": "Von",
     "3g-proof-status": "Status",
-    "additional-information": "Sie können Ihren grünen Pass importieren, indem Sie den entsprechenden QR-Code scannen. Alternativ kann auch ein PDF-Dokument oder ein Bild mit dem QR-Code ausgewählt werden.",
+    "additional-information": "Sie können Ihren Nachweis einer geringen epidemiologischen Gefahr importieren, indem Sie den entsprechenden QR-Code scannen. Alternativ kann auch ein PDF-Dokument oder ein Bild mit dem QR-Code ausgewählt werden.",
     "confirm-checkbox-valid-cert-text": "Ich bestätige, dass mein Nachweis für die Dauer meines Aufenthalts gültig ist, sowie die Richtigkeit meiner Angaben, und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
     "confirm-not-checked-body": "Bitte bestätigen Sie, dass Ihre Angaben richtig sind und dass Sie sich bewusst sind, dass der Missbrauch der App greenlight zu rechtlichen Konsequenzen führen kann.",
     "confirm-not-checked-title": "Zustimmung nicht erteilt!",
