--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -5,7 +5,7 @@
     "3g-proof-label-text": "Import evidence",
     "3g-proof-proof-from": "From",
     "3g-proof-status": "Status",
-    "additional-information": "u can import your Green Pass by scanning the corresponding QR code. Alternatively, you can select a PDF document or an image with the QR code. ",
+    "additional-information": "You can import your evidence of a low epidemiological risk by scanning the corresponding QR code. Alternatively, you can select a PDF document or an image with the QR code. ",
     "confirm-checkbox-valid-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the greenlight app or the provision of incorrect data can lead to legal consequences.",
     "confirm-not-checked-body": "Please confirm that the information you have provided is correct and that you are aware that misuse of the greenlight app may lead to legal consequences",
     "confirm-not-checked-title": "Consent not given!",
