--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -105,6 +105,9 @@
   },
   "show-ticket-title": "Ticket: ",
   "valid-till": "Probably valid until ",
+  "validation-not-possible": "The evidence cannot currently be validated. Please try again later.",
+  "validation-not-possible-body": "The evidence cannot currently be validated. Please try again later.",
+  "validation-not-possible-title": "Validation not possible",
   "validity-tooltip": "According to the current regulations of {{place}}. The validity period is automatically updated when the regulations change.",
   "validity-tooltip-ticket-text": "The ticket is only valid in electronic form."
 }
