Add support for new ticket types and adjust content accordingly

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -5,6 +5,8 @@
     "3g-proof-label-text": "Nachweis importieren",
     "3g-proof-proof-from": "Von",
     "3g-proof-status": "Status",
+    "3g-proof-valid-for": "Gültig für",
+    "3g-proof-valid-full": "Lehrveranstaltungen",
     "additional-information": "Sie können Ihren Nachweis einer geringen epidemiologischen Gefahr importieren, indem Sie den entsprechenden QR-Code scannen. Alternativ kann auch ein PDF-Dokument oder ein Bild mit dem QR-Code ausgewählt werden.",
     "confirm-checkbox-valid-cert-text": "Ich bestätige, dass mein Nachweis für die Dauer meines Aufenthalts gültig ist, sowie die Richtigkeit meiner Angaben, und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
     "confirm-not-checked-body": "Bitte bestätigen Sie, dass Ihre Angaben richtig sind und dass Sie sich bewusst sind, dass der Missbrauch der App greenlight zu rechtlichen Konsequenzen führen kann.",
@@ -72,6 +74,7 @@
     "3-g-evidence": "Nachweis",
     "3-g-evidence-green-pass-valid": "Grüner Pass auf diesem Gerät importiert und gültig",
     "3-g-evidence-greenpass": "Nachweis: Grüner Pass gefunden",
+    "3-g-evidence-fullproof": "Nachweis: Vollständiger Nachweis gefunden",
     "3-g-evidence-invalid": "kein gültiger Nachweis auf diesem Gerät gefunden",
     "3-g-evidence-invalid-text": "Eventuell haben Sie Ihren Nachweis auf einem anderen Gerät importiert, der Nachweis ist nicht mehr gültig oder die Applikation wurde für einen längeren Zeitraum nicht genutzt.",
     "3-g-evidence-maximize-saving": "Fügen Sie die App auf dem Startbildschirm Ihres Smartphones hinzu, um die Speicherdauer des Nachweises zu maximieren.",
