--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -5,6 +5,8 @@
     "3g-proof-label-text": "Import evidence",
     "3g-proof-proof-from": "From",
     "3g-proof-status": "Status",
+    "3g-proof-valid-for": "Valid for",
+    "3g-proof-valid-full": "Lectures",
     "additional-information": "You can import your evidence of a low epidemiological risk by scanning the corresponding QR code. Alternatively, you can select a PDF document or an image with the QR code. ",
     "confirm-checkbox-valid-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the greenlight app or the provision of incorrect data can lead to legal consequences.",
     "confirm-not-checked-body": "Please confirm that the information you have provided is correct and that you are aware that misuse of the greenlight app may lead to legal consequences",
@@ -72,6 +74,7 @@
     "3-g-evidence": "Evidence",
     "3-g-evidence-green-pass-valid": "Green Pass imported and valid on this device",
     "3-g-evidence-greenpass": "Evidence: Green Pass found",
+    "3-g-evidence-fullproof": "Evidence: Full proof found",
     "3-g-evidence-invalid": "No valid evidence found on this device",
     "3-g-evidence-invalid-text": "You may have imported your evidence on another device, the evidence is no longer valid or the application has not been used for a longer period of time.",
     "3-g-evidence-maximize-saving": "Add the app to the home screen of your smartphone to maximize the storage time of the evidence.",
