--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -6,6 +6,7 @@
     "3g-proof-proof-from": "From",
     "3g-proof-status": "Status",
     "3g-proof-valid-for": "Valid for",
+    "3g-proof-valid-till-title": "Valid until",
     "3g-proof-valid-full": "Lectures",
     "additional-information": "You can import your evidence of a low epidemiological risk by scanning the corresponding QR code. Alternatively, you can select a PDF document or an image with the QR code. ",
     "confirm-checkbox-valid-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the greenlight app or the provision of incorrect data can lead to legal consequences.",
