--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -6,6 +6,7 @@
     "3g-proof-proof-from": "Von",
     "3g-proof-status": "Status",
     "3g-proof-valid-for": "Gültig für",
+    "3g-proof-valid-till-title": "Gültig bis",
     "3g-proof-valid-full": "Lehrveranstaltungen",
     "additional-information": "Sie können Ihren Nachweis einer geringen epidemiologischen Gefahr importieren, indem Sie den entsprechenden QR-Code scannen. Alternativ kann auch ein PDF-Dokument oder ein Bild mit dem QR-Code ausgewählt werden.",
     "confirm-checkbox-valid-cert-text": "Ich bestätige, dass mein Nachweis für die Dauer meines Aufenthalts gültig ist, sowie die Richtigkeit meiner Angaben, und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
